--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "converter"
   ],
   "author": "Andrea Giammarchi",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WebReflection/hyphenizer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/WebReflection/hyphenizer/issues"
+  },
+  "homepage": "https://github.com/WebReflection/hyphenizer#readme"
 }
